# ComfyUI-kaola-IndexTTS2

./: .gitignore  ENVIRONMENT_FIX_GUIDE.md  LOCAL_MODELS.md  NODE_COMPARISON.md  PUBLISHING.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  test_comprehensive_imports.py  test_script_dubbing.py
examples/: 01_voice_clone.json  02_emotion_audio.json  03_emotion_vector.json  04_emotion_text.json  05_script_dubbing.json  README.md  example_workflow.json
kaola_indextts/: cli.py  infer.py  infer_v2.py
kaola_indextts/BigVGAN/: ECAPA_TDNN.py  bigvgan.py  models.py
kaola_indextts/BigVGAN/alias_free_activation/cuda/: activation1d.py
kaola_indextts/gpt/: conformer_encoder.py  model.py  model_v2.py  transformers_generation_utils.py  transformers_gpt2.py  transformers_modeling_utils.py
kaola_indextts/s2mel/dac/model/: dac.py
kaola_indextts/s2mel/dac/nn/: quantize.py
kaola_indextts/s2mel/dac/utils/: __init__.py
kaola_indextts/s2mel/modules/: commons.py  diffusion_transformer.py  flow_matching.py  length_regulator.py  wavenet.py
kaola_indextts/s2mel/modules/campplus/: DTDNN.py
kaola_indextts/utils/: arch_util.py  feature_extractors.py  front.py  maskgct_utils.py
kaola_indextts/utils/maskgct/models/codec/amphion_codec/: codec.py
kaola_indextts/utils/maskgct/models/codec/amphion_codec/quantize/: __init__.py  residual_vq.py
kaola_indextts/utils/maskgct/models/codec/kmeans/: repcodec_model.py
kaola_indextts/utils/maskgct/models/tts/maskgct/: maskgct_s2a.py
nodes/: indextts2_node.py
