[project]
name = "comfyui-kaola-indextts2"
description = "ComfyUI custom nodes for IndexTTS-2 zero-shot text-to-speech synthesis with advanced emotion control"
version = "1.1.0"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "numpy",
    "soundfile",
    "librosa",
]

[project.urls]
Repository = "https://github.com/kana112233/ComfyUI-kaola-IndexTTS2"
Homepage = "https://github.com/kana112233/ComfyUI-kaola-IndexTTS2"

[tool.comfy]
PublisherId = "kaola"
DisplayName = "IndexTTS-2 Nodes"
Icon = ""

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
